--- a/css/about_me.css
+++ b/css/about_me.css
@@ -4,11 +4,11 @@
   box-sizing: border-box; }
 
 body {
-  background-image: url("../images/noisy_grid.png");
+  background-image: url("../img/textures/noisy_grid.png");
   font-family: "Source Sans Pro", Frutiger, Helvetica, sans; }
   @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
     body {
-      background-image: url("../images/noisy_grid@2x.png");
+      background-image: url("../img/textures/noisy_grid@2x.png");
       background-size: 150px 150px; } }
 
 .container {
