--- a/css/resume.css
+++ b/css/resume.css
@@ -40,7 +40,7 @@ body {
   max-width: 960px;
   margin: 0 auto;
   color: #333333;
-  background-image: url("../images/noisy_grid.png"); }
+  background-image: url("../img/textures/noisy_grid.png"); }
 
 a {
   color: #333333;
