--- a/scss/about_me.scss
+++ b/scss/about_me.scss
@@ -12,7 +12,7 @@ $highlight: #0079bc;
 
 body{
 	// background-image: url("../img/escheresque_ste.png");
-	@include retina-image('../images/noisy_grid', 150px 150px);
+	@include retina-image('../img/textures/noisy_grid', 150px 150px);
 
 	font-family: "Source Sans Pro", Frutiger, Helvetica, sans;
 }
