--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -60,7 +60,7 @@ body{
 	max-width: 960px;
 	margin: 0 auto;
 	color: $body-color;
-	background-image: url('../images/noisy_grid.png');
+	background-image: url('../img/textures/noisy_grid.png');
 
 }
 
