--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -1,4 +1,4 @@
-/*Built with some simple scss. Check it out at resume.scss, but it's nothing special.*/
+/*Built with some simple scss. Check it out at http://alanmooiman.com/scss/resume.scss, but it's nothing special.*/
 
 $body-color: #333;
 
@@ -65,11 +65,10 @@ body{
 }
 
 a{
-	color: $body-color;
-	text-decoration: none;
+	color: inherit;
 }
 
-li, p{
+li, p, a{
 	line-height: 1.5;
 }
 
@@ -77,7 +76,12 @@ li, p{
 	clear: both;
 	margin-top: 1em;
 }
-
+.email{
+	text-decoration:none;
+}
+.project{
+	margin-top: 1em;
+}
 /*ul*/.skills{
 @include medium{
 	list-style-position: inside;
