Line spacing, fonts
Due to markup restructuring

--- a/css/resume.css
+++ b/css/resume.css
@@ -69,18 +69,18 @@ li, p, a {
   margin-left: 1px; }
 
 .resume_item {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  line-height: 1.5em; }
+  .resume_item h3 {
+    display: inline-block; }
 
 .resume_item + ul {
   margin-top: .75em; }
 
-.resume_item span {
-  display: block; }
-
-.organization, .location {
-  font-size: .7em;
-  font-weight: normal; }
-
 .organization_dates {
-  font-size: .7em;
-  font-weight: normal; }
+  font-family: Optima, Candara, "Trebuchet MS", sans-serif; }
+
+.organization {
+  display: inline-block;
+  font-size: 1.1em;
+  font-family: Optima, Candara, "Trebuchet MS", sans-serif; }
