--- a/css/about_me.css
+++ b/css/about_me.css
@@ -33,7 +33,9 @@ body {
       width: 90%; } }
 
 .avatar, .avatar_wrap {
-  border-radius: 50%; }
+  border-radius: 50%;
+width: 5em;
+height: 5em; }
 
 .avatar_wrap {
   float: left;
