Add title back to post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@
 
             <span class="post-meta"><time datetime="{{post.time}}">{{page.date | date:"%B %-d, %Y"}}</time> </span>
 
-            <h1 class="post-title">{{post.title}}</h1>
+            <h1 class="post-title">{{page.title}}</h1>
 
             <section class="post-content">
                 {{content}}
